<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="header">My Nanodegree Apps!</string>
    <string name="app1">Popular Movies</string>
    <string name="app2">Stock Hawk</string>
    <string name="app3">Build It Bigger</string>
    <string name="app4">Make Your App Material</string>
    <string name="app5">Go Ubiquitous</string>
    <string name="app6">Capstone</string>
</resources>
