<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.project0.MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/header"
                android:id="@+id/textView"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/header_margin"
                android:onClick="sendMessage" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app1"
                android:id="@+id/button"
                android:layout_marginTop="@dimen/header_margin"
                android:theme="@style/NormalButton"
                android:onClick="sendMessage" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app2"
                android:id="@+id/button2"
                android:theme="@style/NormalButton"
                android:onClick="sendMessage" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app3"
                android:id="@+id/button3"
                android:theme="@style/NormalButton"
                android:onClick="sendMessage" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app4"
                android:id="@+id/button4"
                android:theme="@style/NormalButton"
                android:onClick="sendMessage" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app5"
                android:id="@+id/button5"
                android:theme="@style/NormalButton"
                android:onClick="sendMessage" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app6"
                android:id="@+id/button6"
                android:theme="@style/CapstoneButton"
                android:onClick="sendMessage" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
